[package]
name = "maze_q_learning"
version = "0.1.0"
edition = "2021"

# Dependencies
[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.4"  # Check for the latest version on crates.io
futures-util = "0.3"

